DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Oct-11-2004 patrickh    Implemented version checking for device driver and
                        cluster plug-ins.  All Gadgeteer plug-ins must now
                        have an exported function called getGadgeteerVersion().
                        See the information in RELEASE_NOTES.txt for more
                        details.
                        NEW VERSION: 0.18.0
Oct-11-2004 aronb       Added support for BaseTypes InputGlove & 
                        InputGloveDigital in order to allow glove
                        devices to work properly on the cluster.
Oct-11-2004 patrickh    Updated to require VPR 0.40.0.
                        NEW VERSION: 0.17.1
Sep-24-2004 aronb       Split gadget::InputManager::updateAllData() into
                        gadget::InputManager::updateAllDevices() and
                        gadget::InputManager::updateAllProxies().
                        NEW VERSION: 0.17.0
Aug-19-2004 patrickh    Added a driver for joysticks on Windows that uses
                        Direct Input.  Submitted by Kejian Jin
                        <kjin@ats.ucla.edu>.
May-26-2004 dshipton    Added a standalone driver for USDigital SerialEncoder
May-21-2004 dshipton    Added in USDigital SerialEncoder driver for Baron table.
May-08-2004 patrickh    Updated to VPR 0.36.0.
Apr-26-2004 pallindo    Refactored glove support.
                        NEW VERSION: 0.15.0
Apr-11-2004 patrickh    Gadgeteer now depends on an installed version of GMTL.
Apr-11-2004 patrickh    The Input and Cluster Managers now append a default
                        search path for driver and plug-in DSOs respectively.
                        Updated to VPR 0.35.2.
                        NEW VERSION: 0.14.4
Apr-05-2004 patrickh    Updated to JCCL 0.17.0.
Apr-01-2004 patrickh    Fixed MotionStar crashing bugs on Windows and array