@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-18-2004 allenb      Renamed Input::getBaseType to getInputTypeName.
 Oct-11-2004 patrickh    Implemented version checking for device driver and
                         cluster plug-ins.  All Gadgeteer plug-ins must now
                         have an exported function called getGadgeteerVersion().
